--- a/desafios/DESAFIO10/style.css
+++ b/desafios/DESAFIO10/style.css
@@ -41,7 +41,7 @@ header {
 
 h1 {
     color: white;
-    font-size: 4em;
+    font-size: 3em;
     margin: 0px;
     padding: 40px 20px 20px 20px ;
     font-family: tec, sans-serif;
@@ -99,6 +99,11 @@ p {
 img {
     display: block;
     margin: auto;
+    width: 100%;
+}
+
+img#img1 {
+    max-width: 300px;
 }
 
 .video {
@@ -144,11 +149,10 @@ h3 {
 }
 
 .lista2 {
-    display: inline-block;
     color: black;
     padding: 0px;
-    margin: 1px 300px 1px 10px;
-
+    columns: 2;
+    padding-left: 10px;
 }
 
 .a2:visited {
@@ -178,5 +182,9 @@ h3 {
     height: 30px;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
 
+.creditos p {
+  position: absolute;
 }
