--- a/exercicios/exe015/style.css
+++ b/exercicios/exe015/style.css
@@ -1,23 +1,32 @@
 @charset "UTF-8";
 
 body {
-    background-color: rgba(0, 0, 0, 0.863);
+    background-color: rgba(127, 255, 212, 0.473);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
 }
+
 h1 {
-    color: rgb(54, 221, 243);
-    background-color: rgba(128, 128, 128, 0.178);
+    color: rgba(28, 58, 48, 0.822);
+}
+
+h1#principal {
     text-align: center;
-    font-size: 40px;
+    background-color: aliceblue;
+    color: rgba(44, 35, 35, 0.89);
 }
+
 h2 {
-    color: rgba(48, 138, 173, 0.801);
-    font-size: 25px;
+    color: rgb(79, 197, 177);
 }
-p {
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    background-color: rgba(128, 128, 128, 0.178);
-    text-align: justify;
+
+.basico {
+    color: rgb(40, 165, 77);
+}
+
+.intermediario {
+    color: rgb(40, 42, 165);
+}
+
+.avancado {
+    color: rgb(165, 40, 40);
 }
